Weather Data YAML complete

--- a/.github/workflows/weather-data.yml
+++ b/.github/workflows/weather-data.yml
@@ -1,1 +1,37 @@
-#
+name: Run Weather Script and Push Changes
+
+on:
+   schedule:
+     # Daily at 11AM
+     - cron: '0 11 * * *' # Choosing 11AM as Met Eireann began to block 10AM requests from GitHub Servers due to volume of requests.
+   workflow dispatch: # Allows manual triggering of workflow
+
+jobs:
+  run-weather:
+     runs-on: ubuntu-latest
+
+    steps:
+    # Step 1: Check out the repository
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: true # Ensures credentials are available for pushing changes
+
+    # Step 2: Set up Git
+    - name: Set up Git
+      run:
+        git config --global user.name "github-actions"
+        git config --global user.email "github-actions@users.noreply.github.com"
+
+    # Step 3: Run weather.sh
+    - name: Run the weather.sh script
+      run:
+        chmod +x weather.sh  # Make sure the script is executable
+        ./weather.sh  # Execute the script
+
+   # Step 4: Commit and Push New Data
+    - name: Commit and Push New Data
+      run:
+        git add .
+        git commit -m "Automated weather data update" || echo "No changes to commit"
+        git push origin main  # Push the changes to the main branch
